Create tab icons component
To ensure we can render the proper icon in the tab card, we need to
handle different states.
This commit focuses on creating the logic to render one icon or the
other with a specific component depending on its state.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,13 @@
 @import 'tailwindcss';
 
+/* Naming should follow property-entity-attribute */
+
 @theme inline {
-	--color-gray-border: #e1e1e1;
+	--color-border-gray: #e1e1e1;
+	--color-icon-orange: #f59d0e;
+	--color-icon-gray: #8c93a1;
+}
+
+* {
+	box-sizing: border-box;
 }
