--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 	--color-border-gray: #e1e1e1;
 	--color-icon-orange: #f59d0e;
 	--color-icon-gray: #8c93a1;
+	--color-text-black: 1A1A1A;
 }
 
 * {
