--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,13 @@
 
 @theme inline {
 	--color-border-gray: #e1e1e1;
+	--color-border-blue: #2f72e2;
 	--color-icon-orange: #f59d0e;
+	--color-icon-light-gray: #9da4b2;
 	--color-icon-gray: #8c93a1;
-	--color-text-black: 1A1A1A;
+	--color-destroy: #ef494f;
+	--color-text-black: #1a1a1a;
+	--color-text-gray: #677289;
 }
 
 * {
