--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,8 @@
 @theme inline {
 	--color-border-gray: #e1e1e1;
 	--color-border-blue: #2f72e2;
+	--color-bg-light-gray: #ebedf0;
+	--color-bg-gray: #d9dce1;
 	--color-icon-orange: #f59d0e;
 	--color-icon-light-gray: #9da4b2;
 	--color-icon-gray: #8c93a1;
